channel-http: login event and public /login/callback when HTTP_SURFACE_PUBLIC_URL is set
